# FinAI

./: .env.example  .flake8  .gitignore  IMPROVEMENTS_SUMMARY.md  README.md  main.py  pyproject.toml  pytest.ini  run_app.py  run_fallback_tests.py  run_tests.py
config/: streamlit_config.toml
examples/: cash_flow_types_demo.py  return_calculations.py
portfolio-tracker/: .pre-commit-config.yaml  Makefile  TESTING_AND_LINTING.md  main.py  pyproject.toml
portfolio-tracker/scripts/: lint.sh  test.sh
portfolio-tracker/tests/: conftest.py
portfolio-tracker/tests/unit/: test_financial_metrics.py  test_portfolio_models.py  test_portfolio_storage.py
src/: __init__.py  mcp_server.py
src/agents/: __init__.py  analytics_agent.py  base_agent.py  llm_config.py  orchestrator_agent.py  portfolio_agent.py  portfolio_tools.py  shared_state.py  tools.py  transaction_agent.py
src/agents/portfolio_tools/: __init__.py  _tools.py  models.py
src/agents/tools/: __init__.py  market_data_tools.py
src/data_providers/: __init__.py  alpha_vantage.py  base.py  fx_cache.py  manager.py  yahoo_finance.py
src/portfolio/: __init__.py  analyzer.py  instrument_resolver.py  manager.py  market_data_store.py  models.py  optimizer.py  portfolio_history.py  scenarios.py  snapshot_store.py  storage.py
src/services/: __init__.py  market_data_service.py
src/ui/: __init__.py  market_data_page.py  streamlit_app.py
src/utils/: health_check.py  initializer.py  logging_config.py  metrics.py
tests/: README.md  __init__.py  conftest.py
tests/unit/: test_advanced_what_if_tools.py  test_chart_currency_display.py  test_data_providers.py  test_fx_currency_conversion.py  test_metrics.py  test_portfolio_analyzer.py  test_portfolio_fallbacks.py  test_portfolio_manager.py  test_portfolio_models.py  test_position_fallbacks.py  test_scenario_engine.py  test_tools.py  test_transaction_balance.py  test_transaction_fallbacks.py  test_what_if_simulations.py
